added game logic manipulated css

--- a/starter/index.html
+++ b/starter/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
+      <h1 id="game-title">Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <button class="btn again">Reset</button>
       <div class="number">?</div>
     </header>
     <main>
@@ -20,15 +20,13 @@
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
-        <p class="message">Start guessing</p>
+        <p class="message">Start Guessing!</p>
         <p class="label-score">💯 Score: <span class="score">20</span></p>
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
       </section>
-      <!-- <button id="testButton">Hello</button> -->
     </main>
-    <!-- <h1 id="testText">Hello</h1> -->
     <script src="script.js"></script>
   </body>
 </html>
